<resources>
    <string name="app_name">CalculateLove</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="calculate">Calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">result</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="skip">skip</string>
    <string name="get_started">Get started</string>
    <string name="name">Name</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
</resources>